--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@ body {
   font-family: 'Futura LT';
 }
 
-
 .top-btn-wrap {
   text-align: right;
   margin-top: -25px;
@@ -13,7 +12,7 @@ body {
 .top-btn-wrap button {
   background: no-repeat;
   border: none;
-  color: #FC4BA3;
+  color: #fc4ba3;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 30px;
@@ -28,19 +27,19 @@ body {
 }
 
 .big-title .color1 {
-  color: #FC4BA3;
+  color: #fc4ba3;
 }
 
 .big-title .color2 {
-  color: #3FECC5;
+  color: #3fecc5;
 }
 
 .big-title .color3 {
-  color: #10169B;
+  color: #10169b;
 }
 
 .big-title .color4 {
-  color: #AD8F45;
+  color: #ad8f45;
 }
 
 .connect-wrap .colors-image {
@@ -69,7 +68,7 @@ body {
   height: 50px;
   width: 50px;
   border-radius: 50%;
-  background: #10169B;
+  background: #10169b;
   margin: 0 5px;
   position: relative;
   border: none;
@@ -87,7 +86,7 @@ body {
 }
 
 .calculator-buttons button span:after {
-  content: "";
+  content: '';
   background: #fff;
   height: 22px;
   width: 22px;
@@ -99,12 +98,12 @@ body {
 }
 
 .calculator-buttons button.active span:after {
-  background: #FC4BA3;
+  background: #fc4ba3;
 }
 
 .calculator-value {
   background: #fff;
-  color: #010B34;
+  color: #010b34;
   padding: 0 30px;
   line-height: 50px;
   border-radius: 50px;
@@ -118,8 +117,8 @@ body {
 }
 
 .invest-calculator .primary-btn {
-  background: #3FECC5;
-  ;border-radius: 50px;
+  background: #3fecc5;
+  border-radius: 50px;
   width: 100%;
   padding: 10px 30px;
   font-size: 24px;
@@ -150,7 +149,7 @@ body {
 }
 
 .text-box .primary-btn {
-  background: #3FECC5;
+  background: #3fecc5;
   border-radius: 50px;
   padding: 10px 30px;
   font-size: 16px;
@@ -160,11 +159,25 @@ body {
 }
 
 .line-one {
-  border-bottom: 5px solid #FC4BA3;
+  border-bottom: 5px solid #fc4ba3;
   margin-top: 30px;
 }
 .line-two {
-  border-bottom: 2px solid #10169B;
+  border-bottom: 2px solid #10169b;
+}
+
+.calculator-buttons button:before {
+  position: absolute;
+  content: '';
+  z-index: 2222;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.calculator-value {
+  min-width: 142px;
 }
 
 @media (max-width: 1400px) {
@@ -212,27 +225,27 @@ body {
   }
   .invest-calculator-inner {
     display: block;
-}
-.invest-calculator {
-  text-align: center;
-}
-.calculator-value {
-  margin-left: 0;
-  margin-top: 20px;
-}
+  }
+  .invest-calculator {
+    text-align: center;
+  }
+  .calculator-value {
+    margin-left: 0;
+    margin-top: 20px;
+  }
 }
 
 @media (max-width: 425px) {
   .calculator-buttons button {
     height: 35px;
     width: 35px;
-}
-.calculator-buttons button span {
-  height: 25px;
-  width: 25px;
-}
-.calculator-buttons button span:after {
-  height: 15px;
-  width: 15px;
-}
+  }
+  .calculator-buttons button span {
+    height: 25px;
+    width: 25px;
+  }
+  .calculator-buttons button span:after {
+    height: 15px;
+    width: 15px;
+  }
 }
